src/test/error/var.lns
{
   let val:Map<int> = {};  // error
   let val2:Array<int,int> = [@];
   let val2:List<int,int> = [];
}


pub let var = 1;
{
   pub let var2 = 1;  // error
}
pub let var3 = 1;

provide var;

